@@ -6,7 +6,7 @@
     <p id='p_id' name='p_name' class='p_class'>Static Elements Page</p>
 
     <input id="text_field_id" name="text_field_name" class="text_field_class"
-           size="40" type="text"/>
+           title="text_field_title" size="40" type="text"/>
 
     <input id="hidden_field_id" name="hidden_field_name" class="hidden_field_class"
            size="40" type="hidden" value="12345"/>
